--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,11 +11,6 @@
     "sourceType": "module"
   },
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "import/extensions": "off",
-    "import/prefer-default-export": "off",
-    "import/no-default-export": "error",
-    "no-shadow": "off",
-    "semi": ["error", "never"]
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   }
 }
